--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="js/out.js"></script>
+    <script src="js/out.js" type="text/javascript"></script>
 </body>
 </html>
